# janus-gateway

./: .envrc  .gitignore  .gitmodules  README.md  Rakefile  meson.build  sdp.c
.build/: default.ini
plugins/: janus_textroom.c
postprocessing/: pp-cmdline.c  pp-cmdline.h
subprojects/: glib.wrap  jansson.wrap  libconfig.wrap  libffi.wrap  libmicrohttpd.wrap  libnice.wrap  libsrtp2.wrap  libwebsockets.wrap  opus.wrap
